[project]
name = "horiba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "horiba-sdk>=0.5.4",
    "matplotlib==3.8.3",
    "optosigma",
    "pymeasure>=0.15.0",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.13.0",
    "pyqtgraph==0.12.4",
    "thorlabspm100>=1.2.2",
]

[tool.uv.sources]
optosigma = { git = "https://github.com/elerac/optosigma" }
